correct a spacing, need a better solution

--- a/src/views/admin/admin.scss
+++ b/src/views/admin/admin.scss
@@ -14,7 +14,7 @@
   }
 
   & .opened-sidebar {
-    flex-grow: 0.4;
+    flex-grow: 0.2;
     overflow-y: scroll;
 
     & .list-races {
