--- a/src/views/builder/builder.scss
+++ b/src/views/builder/builder.scss
@@ -14,7 +14,7 @@
   }
 
   & .opened-sidebar {
-    flex-grow: 0.4;
+    flex-grow: 0.2;
     overflow-y: scroll;
     & .race-sidebar {
       display: flex;
