--- a/src/views/frames/view_sidebar.scss
+++ b/src/views/frames/view_sidebar.scss
@@ -23,7 +23,7 @@
 }
 
 .opened-sidebar {
-  flex-grow: 0.3;
+  flex-grow: 0.2;
   overflow-y: scroll;
   & .top {
     display: flex;
