--- a/src/views/role/role.scss
+++ b/src/views/role/role.scss
@@ -13,7 +13,7 @@
   }
 
   & .opened-sidebar {
-    flex-grow: 0.4;
+    flex-grow: 0.2;
     overflow-y: scroll;
 
     & .list-roles {
